syntax = "proto3";

package userv1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";

option go_package = "github.com/ydssx/morphix/api/user/v1;userv1";

// 用户服务
service UserService {
  // 用户注册
  rpc Register(RegistrationRequest) returns (User) {
    option (google.api.http) = {
      post: "/api/users/register"
      body: "*"
    };
  }
  // 用户登录
  rpc Login(LoginRequest) returns (AuthenticationResponse) {
    option (google.api.http) = {
      post: "/api/users/login"
      body: "*"
    };
  }

  rpc Logout(LogoutRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/users/logout"
      body: "*"
    };
  }

  rpc UpdateProfile(UpdateProfileRequest) returns (User) {
    option (google.api.http) = {
      patch: "/api/users/profile/update"
      body: "*"
    };
  }

  rpc ResetPassword(ResetPasswordRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/users/resetPassword"
      body: "*"
    };
  }

  rpc Authenticate(google.protobuf.Empty) returns (AuthenticationResponse) {
    option (google.api.http) = {
      post: "/api/users/authenticate"
      body: "*"
    };
  }

  rpc Authorize(AuthorizationRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/users/authorize"
      body: "*"
    };
  }

  rpc GetUserList(UserListRequest) returns (UserListResponse) {
    option (google.api.http) = {get: "/api/users"};
  }

  rpc ManageUserPermission(ManageUserPermissionRequest) returns (User) {
    option (google.api.http) = {
      post: "/api/users/managePermission"
      body: "*"
    };
  }

  rpc LogActivity(LogEntry) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/users/logActivity"
      body: "*"
    };
  }

  rpc GetUser(GetUserRequest) returns (User) {
    option (google.api.http) = {get: "/api/user/{user_id}"};
  }
}

message User {
  int64 id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
  string phone = 5;
  // 其他个人信息字段...
}

message RegistrationRequest {
  // 用户名
  string username = 1;
  // 密码
  string password = 2;
  // 邮箱
  string email = 3 [(validate.rules).string.email = true];
  // 手机号
  string phone = 4;
  // 短信验证码
  string sms_code = 5;
}

message LoginRequest {
  string username = 1;
  string password = 2;
  string phone_number = 3;
}

message LogoutRequest {
  string user_id = 1;
}

message UpdateProfileRequest {
  string email = 1 [(validate.rules).string.email = true];
  string phone = 2;
  // 其他需要更新的个人信息字段...
}

message ResetPasswordRequest {
  string username = 1;
  string verification_code = 2;
  string new_password = 3;
}

message AuthenticationResponse {
  string user_id = 1;
  string token = 2;
}

message AuthorizationRequest {
  string user_id = 1;
  string resource = 2;
  repeated string actions = 3;
}

message UserListResponse {
  repeated User users = 1;
}

message UserListRequest {
  int64 page = 1;
  int64 limit = 2;
}

message ManageUserPermissionRequest {
  string user_id = 1;
  repeated string roles = 2;
  repeated string permissions = 3;
}

message LogEntry {
  string user_id = 1;
  string action = 2;
  string timestamp = 3;
  // 其他日志信息字段...
}

message GetUserRequest {
  int64 user_id = 1;
}
